// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`return article results when searching with article id 1`] = `
Object {
  "facets": Array [
    Object {
      "doc_count": 1,
      "key": "code_du_travail",
    },
    Object {
      "doc_count": 1,
      "key": "fiches_ministere_travail",
    },
  ],
  "hits": Object {
    "hits": Array [
      Object {
        "_id": "8",
        "_index": "cdtn_document_test",
        "_score": 10.606363,
        "_source": Object {
          "slug": "r1225-18",
          "source": "code_du_travail",
          "title": "Article R1225-18",
          "url": "https://www.legifrance.gouv.fr/affichCodeArticle.do?idArticle=LEGIARTI000018537778&cidTexte=LEGITEXT000006072050",
        },
        "_type": "_doc",
      },
      Object {
        "_id": "15",
        "_index": "cdtn_document_test",
        "_score": 4.902408,
        "_source": Object {
          "anchor": "#A-qui-s-applique-le-SMIC",
          "slug": "le-smic-a-qui-sapplique-le-smic",
          "source": "fiches_ministere_travail",
          "title": "Le SMIC : à qui s’applique le SMIC ?",
          "url": "https://travail-emploi.gouv.fr/droit-du-travail/la-remuneration/article/le-smic-374531#A-qui-s-applique-le-SMIC",
        },
        "_type": "_doc",
      },
    ],
    "max_score": 10.606363,
    "total": 2,
  },
}
`;

exports[`return faq search results for demission  1`] = `
Object {
  "hits": Array [
    Object {
      "_id": "6",
      "_index": "cdtn_document_test",
      "_score": 4.381212,
      "_source": Object {
        "slug": "dans-les-hcr-quel-est-le-preavis-de-demission",
        "source": "faq",
        "title": "Dans les HCR, quel est le préavis de démission ?",
      },
      "_type": "_doc",
    },
    Object {
      "_id": "7",
      "_index": "cdtn_document_test",
      "_score": 4.1424875,
      "_source": Object {
        "slug": "joccupe-un-poste-de-vendeuse-en-boulangerie-patisserie-et-je-viens-de-poser-ma-demission-quelles-sont-les-consequences-dun-arret-maladie-pendant-la-periode-de-preavis-est-ce-que-je-peux-etre-sanctionnee-en-cas-darret-de-travail",
        "source": "faq",
        "title": "J'occupe un poste de vendeuse en boulangerie-pâtisserie et je viens de poser ma démission. Quelles sont les conséquences d’un arrêt maladie pendant la période de préavis ? Est-ce que je peux être sanctionnée en cas d’arrêt de travail ?",
      },
      "_type": "_doc",
    },
  ],
  "max_score": 4.381212,
  "total": 2,
}
`;

exports[`return faq search results for smic with snippet content 1`] = `
Object {
  "facets": Array [
    Object {
      "doc_count": 1,
      "key": "fiches_ministere_travail",
    },
    Object {
      "doc_count": 1,
      "key": "fiches_service_public",
    },
  ],
  "hits": Object {
    "hits": Array [
      Object {
        "_id": "15",
        "_index": "cdtn_document_test",
        "_score": 29.635727,
        "_source": Object {
          "anchor": "#A-qui-s-applique-le-SMIC",
          "slug": "le-smic-a-qui-sapplique-le-smic",
          "source": "fiches_ministere_travail",
          "title": "Le SMIC : à qui s’applique le SMIC ?",
          "url": "https://travail-emploi.gouv.fr/droit-du-travail/la-remuneration/article/le-smic-374531#A-qui-s-applique-le-SMIC",
        },
        "_type": "_doc",
      },
      Object {
        "_id": "5",
        "_index": "cdtn_document_test",
        "_score": 3.6072366,
        "_source": Object {
          "slug": "demission-dune-assistante-maternelle",
          "source": "fiches_service_public",
          "title": "Démission d'une assistante maternelle",
          "url": "https://www.service-public.fr/particuliers/vosdroits/F33164",
        },
        "_type": "_doc",
      },
    ],
    "max_score": 29.635727,
    "total": 3,
  },
  "snippet": Object {
    "_id": "14",
    "_index": "cdtn_document_test",
    "_score": 25.251722,
    "_source": Object {
      "html": "<p>Au 1er janvier 2019, le montant du <accronym title='Salaire minimum interprofessionnel de croissance' lang='fr'>SMIC</accronym> brut horaire s'établit à <b>10,03&nbsp;€</b> en métropole, en Guadeloupe, en Guyane, en Martinique, à La Réunion, à Saint-Barthélemy, à Saint-Martin et à Saint-Pierre-et-Miquelon.<br/> Soit <b>1521,22&nbsp;€</b> mensuels sur la base de la durée légale du travail de 35 heures hebdomadaires</p>",
      "references": Array [
        Object {
          "titre": "Décret n° 2018-1173 du 19 décembre 2018 portant relèvement du salaire minimum de croissance ",
          "url": "https://www.legifrance.gouv.fr/eli/decret/2018/12/19/MTRX1833925D/jo/texte",
        },
      ],
    },
    "_type": "_doc",
  },
}
`;

exports[`return search results for demission 1`] = `
Object {
  "hits": Array [
    Object {
      "_id": "2",
      "_index": "cdtn_document_test",
      "_score": 4.8440366,
      "_source": Object {
        "anchor": "#Comment-presenter-une-demission",
        "slug": "demission-comment-presenter-une-demission",
        "source": "fiches_ministere_travail",
        "title": "Démission : comment présenter une démission ?",
        "url": "https://travail-emploi.gouv.fr/droit-du-travail/la-rupture-du-contrat-de-travail/article/la-demission#Comment-presenter-une-demission",
      },
      "_type": "_doc",
    },
    Object {
      "_id": "4",
      "_index": "cdtn_document_test",
      "_score": 4.7127852,
      "_source": Object {
        "slug": "demission-dun-salarie",
        "source": "fiches_service_public",
        "title": "Démission d'un salarié",
        "url": "https://www.service-public.fr/particuliers/vosdroits/F2883",
      },
      "_type": "_doc",
    },
    Object {
      "_id": "6",
      "_index": "cdtn_document_test",
      "_score": 4.381212,
      "_source": Object {
        "slug": "dans-les-hcr-quel-est-le-preavis-de-demission",
        "source": "faq",
        "title": "Dans les HCR, quel est le préavis de démission ?",
      },
      "_type": "_doc",
    },
    Object {
      "_id": "0",
      "_index": "cdtn_document_test",
      "_score": 4.2591457,
      "_source": Object {
        "slug": "themes/rupture-de-contrat/la-demission",
        "source": "themes",
        "title": "La démission",
      },
      "_type": "_doc",
    },
    Object {
      "_id": "5",
      "_index": "cdtn_document_test",
      "_score": 4.233539,
      "_source": Object {
        "slug": "demission-dune-assistante-maternelle",
        "source": "fiches_service_public",
        "title": "Démission d'une assistante maternelle",
        "url": "https://www.service-public.fr/particuliers/vosdroits/F33164",
      },
      "_type": "_doc",
    },
    Object {
      "_id": "7",
      "_index": "cdtn_document_test",
      "_score": 4.1424875,
      "_source": Object {
        "slug": "joccupe-un-poste-de-vendeuse-en-boulangerie-patisserie-et-je-viens-de-poser-ma-demission-quelles-sont-les-consequences-dun-arret-maladie-pendant-la-periode-de-preavis-est-ce-que-je-peux-etre-sanctionnee-en-cas-darret-de-travail",
        "source": "faq",
        "title": "J'occupe un poste de vendeuse en boulangerie-pâtisserie et je viens de poser ma démission. Quelles sont les conséquences d’un arrêt maladie pendant la période de préavis ? Est-ce que je peux être sanctionnée en cas d’arrêt de travail ?",
      },
      "_type": "_doc",
    },
    Object {
      "_id": "8",
      "_index": "cdtn_document_test",
      "_score": 3.552703,
      "_source": Object {
        "slug": "r1225-18",
        "source": "code_du_travail",
        "title": "Article R1225-18",
        "url": "https://www.legifrance.gouv.fr/affichCodeArticle.do?idArticle=LEGIARTI000018537778&cidTexte=LEGITEXT000006072050",
      },
      "_type": "_doc",
    },
    Object {
      "_id": "9",
      "_index": "cdtn_document_test",
      "_score": 3.4196582,
      "_source": Object {
        "slug": "r1442-22-4",
        "source": "code_du_travail",
        "title": "Article R1442-22-4",
        "url": "https://www.legifrance.gouv.fr/affichCodeArticle.do?idArticle=LEGIARTI000033748111&cidTexte=LEGITEXT000006072050",
      },
      "_type": "_doc",
    },
    Object {
      "_id": "3",
      "_index": "cdtn_document_test",
      "_score": 1.3544811,
      "_source": Object {
        "anchor": "#L-absence-prolongee-du-salarie-est-elle-une-demission",
        "slug": "demission-labsence-prolongee-du-salarie-est-elle-une-demission",
        "source": "fiches_ministere_travail",
        "title": "Démission : l’absence prolongée du salarié est-elle une démission ?",
        "url": "https://travail-emploi.gouv.fr/droit-du-travail/la-rupture-du-contrat-de-travail/article/la-demission#L-absence-prolongee-du-salarie-est-elle-une-demission",
      },
      "_type": "_doc",
    },
    Object {
      "_id": "1",
      "_index": "cdtn_document_test",
      "_score": 1.2437692,
      "_source": Object {
        "slug": "themes/labandon-de-poste-est-il-une-demission",
        "source": "themes",
        "title": "L’abandon de poste est-il une démission ?",
      },
      "_type": "_doc",
    },
  ],
  "max_score": 4.8440366,
  "total": 10,
}
`;
